--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
     <head>
-        <link rel="stylesheet" href="/assets/style/style.css">
+        <link rel="stylesheet" href="assets/style/style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Bootstrap File -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -59,7 +59,7 @@
          <!-- JQuery -->
          <script src="https://code.jquery.com/jquery.js"></script>  
          <!-- Javascript file -->
-         <script src="/assets/javascript/giphy.js"></script>   
+         <script src="assets/javascript/giphy.js"></script>   
  
     </body>
 </html>
